src/objects/Course__c.object
<CustomObject>
    <description>LMS Courses data</description>
    <fields>
        <fullName>Certification__c</fullName>
        <description>lms Certification reference</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>LMS Course Code</description>
        <inlineHelpText>LMS Course Code</inlineHelpText>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>LMS Course Description</description>
        <inlineHelpText>LMS Course Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>LMS Course Name</description>
        <inlineHelpText>LMS Course Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>LMS Course Status</description>
        <inlineHelpText>LMS Course Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <nameField>
        <displayFormat>Course-{000000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>